kubernetes/infra/authentik/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: authentik
  namespace: authentik
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: authentik
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 600
            unit: Minute
